Possible fix for linefeed test